# token-guardian

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
app/: __init__.py  cli.py  main.py  mcp_server.py
app/models/: schemas.py
app/providers/: __init__.py  base.py  catalog.py  catalog_loader.py  registry.py  sync_service.py
app/providers/data/: model_catalog.json
app/providers/sources/: __init__.py  anthropic.py  google.py  openai.py  openrouter.py
app/routes/: api.py  metrics.py
app/services/: analyzer_service.py  database.py  metrics_service.py  optimizer_service.py
app/utils/: prompt_analysis.py  token_estimator.py
docs/: architecture.md
tests/: __init__.py  conftest.py  test_analyzer_service.py  test_cli.py  test_metrics_service.py  test_optimizer_service.py  test_prompt_analysis.py  test_provider_catalog.py  test_token_estimator.py
