[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-guardian"
version = "0.1.0"
description = "CLI-first prompt guardrail for token, cost, and context observability."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Token Guardian Contributors" }
]
dependencies = [
  "pydantic>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0,<25.0.0",
  "mypy>=1.11.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[project.scripts]
token-guardian = "app.cli:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"
